# claude-agent

./: README.md  main.py  main_streaming.py  pyproject.toml  storage.py  test_agents.py
examples/: claude_response.json  claude_response_tool.json
tests/: test_agents.py  test_agents_without_streaming.py  test_storage.py  test_streaming.py  test_tools.py
tools/: __init__.py  calculator.py  time.py  weather.py
